# monarch-converter

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: python-package.yml
src/: monarch_converter.py
